<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"

        >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/email_login_form"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <com.biz.widget.MaterialEditText
                    android:id="@+id/username"
                    android:digits="@string/text_digits_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:layout_marginTop="15dp"
                    app:met_clearButton="true"
                    android:hint="@string/text_hint_username"
                    app:met_floatingLabelText="@string/text_hint_username"
                    android:inputType="textEmailAddress"
                    />

            <RelativeLayout
                android:id="@+id/code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.biz.widget.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_code"
                    android:maxLength="8"
                    android:layout_marginTop="15dp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/text_confirm"
                    android:digits="@string/text_digits"
                    android:imeOptions="actionUnspecified"

                   />

                <include layout="@layout/fragment_merge_code_layout"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_find_password"
              />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
