<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatCheckedTextView
            android:id="@id/text"
            android:text="@string/text_invoice"
            android:textSize="16dp"
            android:textColor="@color/color_2c2c2c"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/abc_btn_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_invoice"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:maxLength="25"
            android:hint="@string/text_hint_invoice"
            android:background="@drawable/shape_corner_gray_gray_background"
            android:layout_below="@id/text"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    <android.support.v7.widget.AppCompatTextView
            android:id="@id/text1"
            android:text="@string/text_invoice_number"
            android:textSize="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:layout_below="@id/edit_invoice"
            android:textColor="@color/color_2c2c2c"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_number"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:maxLength="18"
            android:visibility="gone"
            android:digits="@string/text_digits"
            android:hint="@string/text_hint_invoice_number"
            android:background="@drawable/shape_corner_gray_gray_background"
            android:layout_below="@id/text1"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
</LinearLayout>