<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"

        >


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_number"
                app:met_clearButton="true"
                android:inputType="number"
                android:layout_marginTop="15dp"

                android:maxLength="11"
                android:digits="@string/text_digits_number"
                android:maxLines="1"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.biz.widget.MaterialEditText
                    android:id="@+id/edit_code"
                    android:layout_marginTop="15dp"
                    android:digits="@string/text_digits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_code"
                    android:maxLength="8"
                     />

               <include layout="@layout/fragment_merge_code_layout"/>
            </RelativeLayout>

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_password"
                android:maxLength="12"
                android:layout_marginTop="15dp"
                app:met_clearButton="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_promo"
                android:layout_marginTop="15dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_promo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="7"
                app:met_clearButton="true"
                android:digits="@string/text_digits"
                android:singleLine="true" />

            <TextView
                android:background="?selectableItemBackground"
                android:id="@+id/text_protocol"
                android:textColor="@color/color_9b9b9b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_register"
                 />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
