<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"

        >


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
     >

        <LinearLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_username"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_shop_name"
                android:maxLength="40"
                app:met_clearButton="true"
                android:maxLines="1"
                android:singleLine="true" />

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_identity"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_shop_identity"
                android:maxLength="10"
                app:met_clearButton="true"
                android:maxLines="1"
                android:singleLine="true" />

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/text_hint_shop_type"
                android:imeActionId="@+id/login"
                android:maxLines="1"
                android:singleLine="true" />

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_area"
                android:maxLength="50"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_area"
                android:maxLines="1"
                android:singleLine="true" />

            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_detail"
                android:maxLength="50"
                android:layout_marginTop="15dp"
                app:met_clearButton="true"
                android:maxLines="1"
                android:singleLine="true" />


            <com.biz.widget.MaterialEditText
                android:id="@+id/edit_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_change_reason"
                android:maxLength="50"
                android:layout_marginTop="15dp"
                app:met_clearButton="true"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_next_step" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
