<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin_35"
            android:paddingRight="@dimen/activity_horizontal_margin_35"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <com.biz.widget.MaterialEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/text_digits"
                android:layout_marginTop="20dp"
                android:hint="@string/text_hint_username"
                app:met_floatingLabelText="@string/text_hint_username"
                android:inputType="textEmailAddress"
                app:met_clearButton="true"
                />


            <com.biz.widget.MaterialEditText
                android:id="@+id/password"
                app:met_clearButton="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_password"
                app:met_floatingLabelText="@string/text_hint_password"
                android:maxLength="12"
                android:layout_marginTop="20dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"

               />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_login"

               />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/text_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:textSize="17dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:textColor="@color/color_9b9b9b"
                    android:onClick="onClick"
                    android:text="@string/text_forget_password_quot" />

                <TextView
                    android:textColor="@color/color_9b9b9b"
                    android:id="@+id/text_register"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:textSize="17dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="0dp"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:drawableRight="@drawable/ic_arrow_right_gray"
                    android:layout_alignParentRight="true"
                    android:onClick="onClick"
                    android:text="@string/text_register" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
