<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin_35"
            android:paddingRight="@dimen/activity_horizontal_margin_35"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <com.biz.widget.MaterialEditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_old_password"
                android:layout_marginTop="15dp"
                app:met_floatingLabelText="@string/text_hint_old_password"
                app:met_clearButton="true"
                android:maxLength="12"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                />


            <com.biz.widget.MaterialEditText
                android:id="@+id/new_password_1"
                app:met_clearButton="true"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_new_password"
                app:met_floatingLabelText="@string/text_hint_new_password"
                android:imeActionId="@+id/login"
                android:maxLength="12"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"

               />
            <com.biz.widget.MaterialEditText
                android:id="@+id/new_password_2"
                app:met_clearButton="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_new_password_again"
                app:met_floatingLabelText="@string/text_hint_new_password_again"
                android:maxLength="12"
                android:layout_marginTop="15dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"

                />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_confirm_change"

               />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
