<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@id/title"
        android:layout_below="@id/icon"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_success_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@id/title_line_2"
        android:layout_marginTop="60dp"
        android:layout_below="@id/title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/base_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_wait_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/text_back_home"
        android:id="@id/btn_2"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_gravity="bottom"
        android:textColor="@color/base_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/btn_red_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>